example code works with just bno055 but not the combined sensor

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:teensy41]
-platform = teensy
+[env:flight]
+platform = teensy@4.17.0
 board = teensy41
 framework = arduino
+upload_protocol = teensy-gui
+build_src_filter = -<main-*.cpp> +<main-flight.cpp>
+lib_deps = 
+    SPI
+    https://github.com/adafruit/Adafruit_BNO055.git
